--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "bitly": "^6.0.8",
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
+    "react-copy-button-wrapper": "0.0.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
